# jmapy

./: main.py  pyproject.toml
src/jmapy/: __init__.py  auth.py  errors.py  models.py  orm.py  repository.py  response.py  session.py  transport.py
src/jmapy/capability/: base.py  core.py  push.py
src/jmapy/orm/: __init__.py  base.py  changes.py  copy.py  errors.py  filtering.py  get.py  query.py  query_changes.py  set.py
tests/: test_todo.py  util.py
