[project]
name = "jmapy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nathan Zilora", email = "njz@cvm.com" }
]
requires-python = ">=3.13"
dependencies = [
    "aiodns>=4.0.0",
    "aiohttp>=3.13.3",
    "pydantic>=2.12.5",
]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "python-dotenv>=1.2.2",
]
